# local-yuque

./: .gitignore  README.md  design.md  metadata.json
.kiro/settings/: mcp.json
.kiro/specs/blocksuite-integration/: design.md  requirements.md  tasks.md
Scripts/: start.ps1  start.sh
backend/: database.py  main.py  models.py  pyproject.toml  test_kb_management.py
backend/services/: file_system.py  storage.py
doc/: frontend_kb_integration.md  kb_management_development.md  requirements_kb_management.md
frontend/: App.tsx  BLOCKSUITE_PATCH.md  BLOCKSUITE_SETUP.md  constants.ts  index.css  index.html  package-lock.json  package.json  test_input_modal.md  test_new_add_button.md  types.ts  vite.config.ts  vitest.config.ts
frontend/components/: AIPanel.tsx  AnnotationToolbar.tsx  BLOCK_OPERATIONS.md  BlockSuiteEditor.test.tsx  BlockSuiteEditor.tsx  EDITOR_TESTS_README.md  Editor.integration.test.tsx  Editor.tsx  EditorErrorBoundary.test.tsx  EditorErrorBoundary.tsx  FallbackEditor.tsx  InputModal.tsx  KbDashboard.tsx  RICH_TEXT_FEATURES.md  SearchModal.tsx  Sidebar.tsx
frontend/patches/: @blocksuite+affine-components+0.17.18.patch  @blocksuite+data-view+0.17.18.patch
frontend/services/: api.ts  mockFileSystem.ts
frontend/src/config/: RichTextAndCodeBlocks.test.ts  blocksuiteConfig.test.ts  blocksuiteConfig.ts
frontend/src/managers/: BlockOperations.property.test.ts  DocumentManager.test.ts  DocumentManager.ts  MarkdownConverter.test.ts  MarkdownConverter.ts  WorkspaceManager.test.ts  WorkspaceManager.ts
frontend/tests/: blocksuite-setup.test.ts  setup.ts
